--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color:lightskyblue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+}
+
+div.options {
+    display: flex;
+    justify-content: space-around;
 }
 
 div.container {
     display: flex;
     flex-direction: column;
+    background-color: white;
     border-style: solid;
     border-color: black;
     align-items: center;
-    max-width: 480px;
-    max-height: 480px;
+    max-width: 960px;
+    max-height: 960px;
 }
 
 div.row {
@@ -18,7 +33,16 @@ div.row {
     flex-direction: row;
 }
 
-div.square {
-    width: 30px;
-    height: 30px;
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+button {
+    padding: 8px 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 8px;
 }
